--- a/CipherChat/cipherchat/cipherchat_project/src/cipherchat_project_frontend/public/index.html
+++ b/CipherChat/cipherchat/cipherchat_project/src/cipherchat_project_frontend/public/index.html
@@ -1,178 +1,151 @@
- 
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
-
-
-
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CipherChat 🔐</title>
-<style>
-
-:root {
-  --bg-color: #0d0d0d;
-  --accent: #00ffe0;
-  --text-color: #eaeaea;
-  --border-radius: 10px;
-  --font-family: 'Segoe UI', sans-serif;
-}
-
-
-#send-button:active {
-  transform: scale(0.98);
-  box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.5);
-}
-
-
-
-
-
-
-
-
-body {
-  background: var(--bg-color);
-  color: var(--text-color);
-  font-family: var(--font-family);
-  margin: 0;
-  padding: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-}
-
-.chat-container {
-  width: 400px;
-  padding: 2rem;
-  background: rgba(30, 30, 30, 0.85);
-  border-radius: var(--border-radius);
-  box-shadow: 0 0 20px var(--accent);
-  backdrop-filter: blur(10px);
-}
-
-h1 {
-  text-align: center;
-  color: var(--accent);
-  font-weight: 500;
-  margin-bottom: 1rem;
-}
-
-input[type="text"] {
-  width: 100%;
-  padding: 0.75rem;
-  margin-bottom: 1rem;
-  border-radius: var(--border-radius);
-  border: none;
-  background: #1a1a1a;
-  color: var(--text-color);
-  font-size: 1rem;
-  outline: none;
-  transition: box-shadow 0.3s ease;
-}
-
-input[type="text"]:focus {
-  box-shadow: 0 0 10px var(--accent);
-}
-
-button {
-  width: 100%;
-  padding: 0.75rem;
-  background: var(--accent);
-  color: #000;
-  font-weight: bold;
-  border: none;
-  border-radius: var(--border-radius);
-  cursor: pointer;
-  font-size: 1rem;
-  transition: background 0.3s ease;
-}
-
-button:hover {
-  background: #00ccb3;
-}
-
-.message {
-  margin-top: 1rem;
-  padding: 0.5rem;
-  background: #1f1f1f;
-  border-left: 3px solid var(--accent);
-  border-radius: var(--border-radius);
-  animation: fadeIn 0.4s ease-out;
-}
-
-@keyframes fadeIn {
-  from { opacity: 0; transform: translateY(10px); }
-  to { opacity: 1; transform: translateY(0); }
-}
-</style>
-
+  <title>CipherChat: DevSync Pro</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Fira Code', monospace;
+      background-color: #0f111a;
+      color: #e0e0e0;
+    }
+    .container {
+      max-width: 900px;
+      margin: auto;
+      padding: 2rem;
+    }
+    h1 {
+      color: #00ffe0;
+      text-align: center;
+      margin-bottom: 1rem;
+    }
+    .message-box {
+      background: #1a1c2c;
+      border: 1px solid #333;
+      padding: 1rem;
+      margin-bottom: 1rem;
+      border-radius: 6px;
+    }
+    .context {
+      font-size: 0.9rem;
+      color: #888;
+    }
+    .content {
+      white-space: pre-wrap;
+      font-size: 1rem;
+      margin-top: 0.5rem;
+    }
+    .sender {
+      font-size: 0.8rem;
+      color: #00ffe0;
+    }
+    textarea, input {
+      width: 100%;
+      padding: 0.75rem;
+      margin-top: 0.5rem;
+      background: #12141f;
+      color: #e0e0e0;
+      border: 1px solid #444;
+      border-radius: 4px;
+      font-family: 'Fira Code', monospace;
+    }
+    button {
+      margin-top: 1rem;
+      padding: 0.75rem 1.5rem;
+      background: #00ffe0;
+      color: #000;
+      border: none;
+      border-radius: 4px;
+      font-weight: bold;
+      cursor: pointer;
+    }
+    button:hover {
+      background: #00c8b0;
+    }
+    .username-box {
+      margin-bottom: 1rem;
+    }
+  </style>
 </head>
 <body>
+  <div class="container">
+    <h1>🧑‍💻 CipherChat: DevSync Pro</h1>
+    
+    <div class="username-box">
+      <input type="text" id="usernameInput" placeholder="Enter username..." />
+      <button onclick="setUsername()">Set Username</button>
+      <span id="currentUser"></span>
+    </div>
 
+    <div id="messages"></div>
 
-
-
-
-  <div class="chat-container">
-    <header>
-      <h1>CipherChat</h1>
-      <p class="status">🔒 Secure connection</p>
-    </header>
-
-    <div id="chat-window" class="chat-window"></div>
-
-    <form id="chat-form">
-      <input 
-        type="text"
-        id="message-input"
-        placeholder="Type your encrypted message..."
-        autocomplete="off"
-        required
-      />
-      <button type="submit">Send</button>
-    </form>
-
-<section class="retrieve-section">
-  <h2>Retrieve Message</h2>
-  <input type="text" id="key-input" placeholder="Enter a key to retrieve message" />
-  <button id="retrieve-btn">Get Message</button>
-  <p id="retrieved-message"></p>
-</section>
-
+    <input type="text" id="contextTag" placeholder="Context (e.g. commit:abc123)" />
+    <textarea id="messageInput" rows="4" placeholder="Type your message..."></textarea>
+    <button onclick="sendMessage()">Send</button>
   </div>
 
-<script>
-  // Your entire JS logic goes here
-  document.getElementById("chat-form").addEventListener("submit", function (e) {
-    e.preventDefault();
+  <script>
+    const messages = [];
 
-console.log("Form submitted");
-    const key = prompt("Enter a key to store this message:");
-    const message = document.getElementById("message-input").value;
+    // Load saved username if present
+    let currentUsername = localStorage.getItem("cipherchat_username") || "";
 
-    if (key && message) {
-      localStorage.setItem(key, message);
-      document.getElementById("message-input").value = "";
-      alert("Message stored securely!");
+    function updateUserDisplay() {
+      const display = document.getElementById("currentUser");
+      if (currentUsername) {
+        display.textContent = `👤 Current user: ${currentUsername}`;
+        document.getElementById("usernameInput").value = "";
+      } else {
+        display.textContent = "❌ No username set";
+      }
     }
-  });
 
-  document.getElementById("retrieve-btn").addEventListener("click", function () {
-    const key = document.getElementById("key-input").value;
-    const storedMessage = localStorage.getItem(key);
-
-    if (storedMessage) {
-      document.getElementById("retrieved-message").innerText = `🔓 Retrieved: ${storedMessage}`;
-    } else {
-      document.getElementById("retrieved-message").innerText = "❌ No message found for that key.";
+    function setUsername() {
+      const input = document.getElementById("usernameInput").value.trim();
+      if (!input) return;
+      currentUsername = input;
+      localStorage.setItem("cipherchat_username", currentUsername);
+      updateUserDisplay();
     }
-  });
-</script>
 
+    // Simulated encryption
+    function encryptMessage(msg) {
+      return btoa(msg); // Replace with real AES encryption
+    }
+    function decryptMessage(msg) {
+      return atob(msg); // Replace with real AES decryption
+    }
 
+    function renderMessages() {
+      const container = document.getElementById('messages');
+      container.innerHTML = '';
+      messages.slice().reverse().forEach(msg => {
+        const box = document.createElement('div');
+        box.className = 'message-box';
+        box.innerHTML = `
+          <div class="context">🔖 ${msg.context}</div>
+          <div class="sender">👤 ${msg.sender}</div>
+          <div class="content">${decryptMessage(msg.content)}</div>
+        `;
+        container.appendChild(box);
+      });
+    }
 
+    function sendMessage() {
+      const context = document.getElementById('contextTag').value.trim();
+      const content = document.getElementById('messageInput').value.trim();
+      if (!content || !context || !currentUsername) return;
+
+      const encrypted = encryptMessage(content);
+      messages.push({ context, content: encrypted, sender: currentUsername });
+      document.getElementById('messageInput').value = '';
+      renderMessages();
+    }
+
+    // Initialize
+    updateUserDisplay();
+    renderMessages();
+  </script>
 </body>
 </html>
